fix(ci): fix npm workspace vuetify resolution + FileStorageRegistry ordering
npm workspace puts @vuetify/loader-shared at root node_modules but
vuetify stayed in frontend/node_modules — module resolution failed.
Fix: pin vuetify 3.12.1 as root devDependency so it hoists to root,
run `npm ci` from repo root (not frontend/), drop per-workspace lock.

FileStorageRegistry.list() used Map.copyOf() which drops insertion
order — fix uses Collections.unmodifiableMap() to preserve
LinkedHashMap ordering (gridfs-first as test expects).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>